Fix display of header on mobile devices.

--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -27,6 +27,8 @@
 
   .site-nav {
     ul {
+      position: relative;
+      top: -2px;
       margin: 0;
       padding: 0;
       list-style: none;
